# OffsetAllocator

./: .gitignore  CMakeLists.txt  LICENSE  offsetAllocator.cpp  offsetAllocator.hpp
.github/workflows/: ci.yml
include/offsetAllocator/: offsetAllocator.hpp
src/: offsetAllocator.cpp
test/: CMakeLists.txt  offsetAllocatorTests.cpp
